# bme680

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  wrapper.h
.github/: dependabot.yml
.github/workflows/: ci.yml
ci/no_std_test/: Cargo.toml
ci/no_std_test/src/: lib.rs
examples/: influx_client.rs  read_sensor_data.rs  reading_sensor_data.rs  reading_temperature.rs
src/: bme680.rs  calc.rs  calculation.rs  consts.rs  device_builder.rs  i2c.rs  lib.rs  settings.rs
