[package]
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
description = "A pure Rust implementation for the BME680 environmental sensor."
documentation = "https://docs.rs/bme680"
license = "MIT"
name = "bme680"
repository = "https://github.com/marcelbuesing/bme680-hal"
version = "0.6.0"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "1.2"
embedded-hal = "=1.0.0"
log = "0.4"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
linux-embedded-hal = "0.4.0"

[dev-dependencies]
env_logger = "0.9"