[package]
authors = ["marcelbuesing <buesing.marcel@googlemail.com>", "denisnutiu <denis.nutiu@googlemail.com>"]
description = "A pure Rust implementation for the BME680 environmental sensor."
documentation = "https://github.com/dnutiu/bme680-rust"
license = "MIT"
name = "bme680"
repository = "https://github.com/dnutiu/bme680-rust"
version = "0.7.0"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "1.2"
embedded-hal = "=1.0.0"
log = "0.4"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
linux-embedded-hal = "0.4.0"

[dev-dependencies]
env_logger = "0.9"