[package]
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
description = "A pure Rust implementation for the BME680 environmental sensor."
documentation = "https://docs.rs/bme680"
license = "MIT"
name = "bme680"
repository = "https://github.com/marcelbuesing/bme680-hal"
version = "0.7.0"
edition = "2018"

[badges]
travis-ci = { repository = "https://github.com/marcelbuesing/bme680-hal", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "2.6"
embedded-hal = "=1.0"
log = "0.4"
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
env_logger = "0.11"
futures = { version = "0.3" }
i2cdev = "0.6"
influx_db_client = { version = "0.5", default-features= false, features = ["rustls-tls"] }
tokio = {version = "1.5", features = ["full"] }
url = "2.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.4.0"
